# Trial2Criteria

./: .env.example  .gitignore  README.md  config.example.json  final_bench.json  pyproject.toml  requirements.txt  start_web.bat  trial_profile_A_Randomized__Double_Blind__Parallel_group_Study_t.json
.github/workflows/: publish-demo-video.yml
clinical_rag/: __init__.py  __main__.py  batch.py  bench_collector.py  cli.py  config.py  entrez.py  llm_client.py  paths.py  reranker.py  search.py  utils.py
clinical_rag/pipeline/: generate_prompts.py  generate_reasoning.py  generate_responses.py
data/: README.md
data/primekg/: disease_selection_prompt.txt
data_prep/: README.md
data_prep/drugbank/: clean_csv.py  drug_fuzzy_matcher.py  drug_matcher.py  drugjson2csv.py  extractjson.py  requirements.txt  synonym.py  xml2json.py
data_prep/trial_gov/: RAG_base_csv_processor.py  SFT_filter_trials (csv2json).py  check_csv_headers.py  clean_text_data_(cleaned版本).py  count_samples.py  extract_first_ten_rows.py  extract_outcomes.py  extract_trials_csv2jsonl.py  extractdrug.py  filter_criteria_samples.py  filter_nct_criteria_(rm_NCT版本).py  filter_trials_(RAG筛选全1).py  filter_trials_byjsonl.py  json2csv.py  json2csv_original.py  process_trials_drug.py  reformat_criteria_improved_(reformat版本).py  remove_bom.py  test_data.csv  (+6 more)
docs/: rag_generation_method.md
templates/: Prompt_template_RAG_CoT.txt  Prompt_template_RAG_noCoT.txt  Prompt_template_Standard.txt  Prompt_template_noRAG_noCoT.txt  RAG_expansion_prompt.txt  Reasoning_generation_prompt.txt
web/: main.py  requirements.txt
(+11 files in other folders)
